@@ -24,9 +24,11 @@
 #'   regarded as empty. (Default: \code{c(NA, "", " ", "\t")}). They will be
 #'   removed if \code{na.rm = TRUE} before agglomeration.
 #'
-#' @param agglomerateTree \code{TRUE} or \code{FALSE}: should
+#' @param agglomerate.tree \code{TRUE} or \code{FALSE}: should
 #'   \code{rowTree()} also be agglomerated? (Default:
-#'   \code{agglomerateTree = FALSE})
+#'   \code{agglomerate.tree = FALSE})
+#' 
+#' @param agglomerateTree alias for \code{agglomerate.tree}.
 #'
 #' @param ... arguments passed to \code{agglomerateByRank} function for
 #'   \code{SummarizedExperiment} objects,
@@ -82,7 +84,7 @@
 #' 
 #' # agglomerate the tree as well
 #' x2 <- agglomerateByRank(GlobalPatterns, rank="Family",
-#'                        agglomerateTree = TRUE)
+#'                        agglomerate.tree = TRUE)
 #' nrow(x2) # same number of rows, but
 #' rowTree(x1) # ... different
 #' rowTree(x2) # ... tree
@@ -176,13 +178,13 @@ setMethod("agglomerateByRank", signature = c(x = "SummarizedExperiment"),
         .check_taxonomic_rank(rank, x)
         .check_for_taxonomic_data_order(x)
         #
-
+        
         # Make a vector from the taxonomic data.
         col <- which( taxonomyRanks(x) %in% rank )
         tax_cols <- .get_tax_cols_from_se(x)
 
         # if na.rm is TRUE, remove the empty, white-space, NA values from
-        # tree will be pruned later, if agglomerateTree = TRUE
+        # tree will be pruned later, if agglomerate.tree = TRUE
         if( na.rm ){
             x <- .remove_with_empty_taxonomic_info(x, tax_cols[col],
                                                    empty.fields)
@@ -271,11 +273,13 @@ setMethod("mergeFeaturesByRank", signature = c(x = "SingleCellExperiment"),
 
 #' @rdname agglomerate-methods
 #' @export
-setMethod("agglomerateByRank", signature = c(x = "TreeSummarizedExperiment"),
-          function(x, ..., agglomerateTree = FALSE){
+setMethod(
+    "agglomerateByRank", signature = c(x = "TreeSummarizedExperiment"),
+    function(
+        x, ..., agglomerate.tree = agglomerateTree, agglomerateTree = FALSE){
               # input check
-              if(!.is_a_bool(agglomerateTree)){
-                  stop("'agglomerateTree' must be TRUE or FALSE.", call. = FALSE)
+              if(!.is_a_bool(agglomerate.tree)){
+                  stop("'agglomerate.tree' must be TRUE or FALSE.", call. = FALSE)
               }
               # If there are multipe rowTrees, it might be that multiple
               # trees are preserved after agglomeration even though the dataset
@@ -289,14 +293,8 @@ setMethod("agglomerateByRank", signature = c(x = "TreeSummarizedExperiment"),
               # Agglomerate also tree, if the data includes only one
               # rowTree --> otherwise it is not possible to agglomerate
               # since all rownames are not found from individual tree.
-              if(agglomerateTree){
-                  if( length(x@rowTree) > 1 ){
-                      warning("The dataset includes multiple tree after ",
-                              "agglomeration. Agglomeration of tree is not ",
-                              "possible.", call. = FALSE)
-                  } else{
-                      x <- addTaxonomyTree(x)
-                  }
+              if(agglomerate.tree){
+                  x <- .agglomerate_trees(x)
               }
               x
           }
@@ -306,9 +304,9 @@ setMethod("agglomerateByRank", signature = c(x = "TreeSummarizedExperiment"),
 #' @aliases agglomerateByRank
 #' @export
 setMethod("mergeFeaturesByRank", signature = c(x = "TreeSummarizedExperiment"),
-          function(x, ..., agglomerateTree = FALSE){
+          function(x, ..., agglomerate.tree = FALSE){
               .Deprecated(old="agglomerateByRank", new="mergeFeaturesByRank", "Now agglomerateByRank is deprecated. Use mergeFeaturesByRank instead.")
-              x <- agglomerateByRank(x, ..., agglomerateTree = agglomerateTree)
+              x <- agglomerateByRank(x, ..., agglomerate.tree = agglomerate.tree)
               x
           }
 )
@@ -368,4 +366,61 @@ setMethod("mergeFeaturesByRank", signature = c(x = "TreeSummarizedExperiment"),
     # Order the data
     x <- x[order, ]
     return(x)
+}
+
+# Agglomerate all rowTrees found in TreeSE object. Get tips that represent
+# rows and remove all others.
+.agglomerate_trees <- function(x){
+    # Get all rowTrees and links between trees and rows
+    trees <- x@rowTree
+    row_links <- rowLinks(x)
+    tree_names <- names(trees)
+    # Loop through tree names
+    trees <- lapply(tree_names, function(name){
+        # Get the tree that is being agglomerated
+        tree <- trees[[name]]
+        # Get corresponding links; which node represent which row?
+        nodes <- row_links[ row_links[["whichTree"]] == name, "nodeLab"]
+        # Remove additional tips, keep only those that are in nodes variable
+        tree <- .agglomerate_tree(tree, nodes)
+        return(tree)
+    })
+    names(trees) <- tree_names
+    # Add trees back
+    x@rowTree <- trees
+    return(x)
+}
+
+# Agglomerate single tree. Get nodes to keep and drop those tips that are not
+# in the set of nodes.
+.agglomerate_tree <- function(tree, keep.nodes){
+    #
+    if( !is.character(keep.nodes) ){
+        stop(
+            "'keep.nodes' must be a single character value or a vector of ",
+            "character values.", call. = FALSE)
+    }
+    #
+    # Get indices of those tips that are not representing rows
+    remove_index <- which( !tree$tip.label %in% keep.nodes )
+    # Do not agglomerate if all tips are removed or if there is no tips to
+    # remove. Instead, give informative warning message.
+    remove_all <- length(remove_index) == length(tree$tip.label)
+    remove_none <- length(remove_index) == 0
+    if( remove_all ){
+        warning(
+            "'keep.nodes' does not specify any tips from 'tree'. After ",
+            "agglomeration, all tips would be removed resulting to ",
+            "NULL. The tree is not agglomerated.", call. = FALSE)
+    }
+    if( remove_none ){
+        warning(
+            "'keep.nodes' does specify all the tips from 'tree'. ",
+            "The tree is not agglomerated.", call. = FALSE)
+    }
+    # Agglomerate tree
+    if( !(remove_all || remove_none) ){
+        tree <- drop.tip(tree, remove_index)
+    }
+    return(tree)
 }
