@@ -31,8 +31,9 @@ test_that("agglomerate", {
                  "'rank' must be an non empty single character value")
     expect_error(mergeFeaturesByRank(xtse,"Family",na.rm=""),
                  "'na.rm' must be TRUE or FALSE")
-    expect_error(mergeFeaturesByRank(xtse,"Family",na.rm=FALSE,agglomerateTree=""),
-                 "'agglomerateTree' must be TRUE or FALSE")
+    expect_error(
+        mergeFeaturesByRank(xtse,"Family",na.rm=FALSE,agglomerate.tree=""),
+        "'agglomerate.tree' must be TRUE or FALSE")
     xtse2 <- xtse
     rowData(xtse2) <- NULL
     expect_error(mergeFeaturesByRank(xtse2,"Family",na.rm=FALSE),
@@ -70,15 +71,12 @@ test_that("agglomerate", {
     expect_equal(dim(actual),c(603,26))
     expect_equal(length(rowTree(actual)$tip.label),
                  length(rowTree(se)$tip.label))
-    actual <- mergeFeaturesByRank(se, rank = "Family", mergeTree = TRUE)
+    actual <- mergeFeaturesByRank(se, rank = "Family", agglomerate.tree = TRUE)
     expect_equal(dim(actual),c(603,26))
-    expect_equal(length(rowTree(actual)$tip.label),
-                 603)
-    actual <- expect_warning(mergeFeaturesByRank(se, rank = "Family",
-                                               agglomerateTree = TRUE))
+    expect_equal(length(rowTree(actual)$tip.label), 603)
+    actual <- mergeFeaturesByRank(se, rank = "Family", agglomerate.tree = TRUE)
     expect_equal(dim(actual),c(603,26))
-    expect_equal(length(rowTree(actual)$tip.label),
-                 496)
+    expect_equal(length(rowTree(actual)$tip.label), nrow(actual))
     # Test that warning occurs when assay contian binary or negative values
     se1 <- transformAssay(se, method = "pa")
     se2 <- se1
